infra/deployments/artifacts/dev/education/basic-app/templates/deployment-misql.yaml
---
# Source: basic-app/templates/deployment-misql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: education-db
  labels:
    app: education-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: education-db
  template:
    metadata:
      labels:
        app: education-db
    spec:
      containers:
        - name: misql
          image: "dlawrence00/misql:0.0.3"
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
          resources:
            null
          volumeMounts:
            - name: misql-data
              mountPath: /data/cv/education.yaml
              subPath: education.yaml
      volumes:
        - name: misql-data
          configMap:
            name: misql-data
