infra/deployments/artifacts/dev/education/basic-app/templates/ingress.yaml
---
# Source: basic-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: education
  labels:
    app: education
    deploy-timestamp: "1773208329"
spec:
  ingressClassName: traefik
  rules:
    - host: education.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: education
                port:
                  number: 8080
